--- a/src/main/resources/templates/admin/adminDefault.html
+++ b/src/main/resources/templates/admin/adminDefault.html
@@ -78,19 +78,19 @@
                     </li>
                     <li class="menu-title">UI elements</li><!-- /.menu-title -->
                     <li>
-                        <a href="/admin/userList"> <i class="menu-icon fa fa-user-cog"></i>회원관리 </a>
+                        <a href="/admin/user/list"> <i class="menu-icon fa fa-user-cog"></i>회원관리 </a>
                     </li>
                     <li>
-                        <a href="/admin/board"> <i class="menu-icon fa fa-pen-square"></i>게시판관리 </a>
+                        <a href="/admin/board/list"> <i class="menu-icon fa fa-pen-square"></i>게시판관리 </a>
                     </li>
                     <li>
-                        <a href="/admin/vs"> <i class="menu-icon fa fa-comments"></i>문의관리 </a>
+                        <a href="/admin/vs/list"> <i class="menu-icon fa fa-comments"></i>문의관리 </a>
                     </li>
                     <li>
-                        <a href="/admin/priceInfo"> <i class="menu-icon fa fa-info-circle"></i>난가정보관리 </a>
+                        <a href="/admin/priceInfo/list"> <i class="menu-icon fa fa-info-circle"></i>난가정보관리 </a>
                     </li>
                     <li>
-                        <a href="/admin/priceCast"> <i class="menu-icon fa fa-microphone"></i>난가예보관리 </a>
+                        <a href="/admin/priceCast/list"> <i class="menu-icon fa fa-microphone"></i>난가예보관리 </a>
                     </li>
                     <li>
                         <a href="/#"> <i class="menu-icon fa fa-history"></i>계란생산이력관리 </a>
@@ -102,10 +102,10 @@
                         <a href="/#"> <i class="menu-icon fa fa-users"></i>전국양계인관리 </a>
                     </li>
                     <li>
-                        <a href="/admin/deposit"> <i class="menu-icon fa fa-hand-holding-usd"></i>입출금관리관리 </a>
+                        <a href="/admin/deposit/list"> <i class="menu-icon fa fa-hand-holding-usd"></i>입출금관리관리 </a>
                     </li>
                     <li>
-                        <a href="/admin/product"> <i class="menu-icon fa fa-cogs"></i>상품관리 </a>
+                        <a href="/admin/product/list"> <i class="menu-icon fa fa-cogs"></i>상품관리 </a>
                     </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
